styles/style.css
body {
    font-family: Arial, sans-serif;
    margin: 0;
    padding: 0;
    background-color: #f4f4f4;
}

header {
    display: flex;
    justify-content: space-between; /* Espacio entre logo y nav */
    align-items: center;
    background: #333;
    color: #fff;
    padding: 1rem;
}

.header-container {
    display: flex;
    align-items: center;
    width: 100%;
}
.container-one {
    display: flex; 
    align-items: center; 
    gap: 10px; 
}
.logo {
    margin-right: 0;
    font-size: 20px; 
    
}

.logo h1 {
    margin: 0; 
}
.language-switcher {
   
    margin-left: 1%; 
  
}
#language-select {
    margin-left: 0; 
    padding: 0.25rem; 
   
}
nav {
    flex: 2;
    display: flex;
    justify-content: flex-end;
    align-items: center;  
}

nav ul {
    display: flex;
    list-style: none;
    padding: 0;
    margin-right: 10px;
}

nav ul li {
    margin-left: 20px;
}

nav ul li a {
    color: #fff;
    text-decoration: none;
}

.social-icons {
    display: flex;
    align-items: center;
    margin-right: 15px;
}

.social-icons a {
    color: #efe7e7;
    font-size: 24px;
    margin-left: 10px;
    transition: color 0.3s;
}

.social-icons a:hover {
    color: #0077b5; 
}

.social-icons a:hover.fa-github {
    color: #333; 
}

.profile-picture {
height:400px;
border-radius: 2%;
float: left; /* Coloca la imagen a la izquierda*/
margin-right: 10%; 
margin-top: 5%;
margin-left: 6%;
margin-bottom: 8%;
}

section {
    overflow: hidden; /* Asegura que el contenedor se expanda para contener tanto la imagen como el texto */
}
.my-name{
    margin-top: 10%;
    font-size: 50px;
    margin-bottom: 0;
    padding-left: 10px;
    margin-left: 10%;
}
.about-me {
    margin-right: 5%;
    margin-left: 10%;
    margin-right: 10%;
    text-align: justify;
   
}
/* Proyectos */
.projects-title {
    display:flex;
    font-size: 40px;
    margin-left: 10%;
    padding-left:10px;

}
    

.projects-container {
    display: flex;
    flex-wrap: wrap;
    justify-content: center;
    gap: 20px;
    padding: 20px;
    margin-bottom: 5%;
}

.project-card {
    background: #fff;
    border: 1px solid #ddd;
    border-radius: 8px;
    overflow: hidden;
    box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
    transition: transform 0.3s;
    width: 300px; 
}

.project-card:hover {
    transform: translateY(-10px);
}

.project-card img {
    width: 100%;
    height: auto;
}

.project-card a {
    text-decoration: none;
    color: inherit;
}

.project-info {
    padding: 15px;
    text-align: center;
}

.project-info h3 {
    margin: 0;
    font-size: 1.2rem;
    color: #333;
}

footer {
    background: #333;
    color: #fff;
    text-align: center;
    padding: 0;
    position:fixed;
    bottom: 0;
    width: 100%;
}
.textanalizer {
    height: 300px;
    margin-left: 20%;
}
.textanalizer-screen-description {
    margin-left: 20%;
}

.title-textanalizer, .description-textanalizer, .Technologies-used, .links {
    margin: 10px;
}
.gilmoregirls {
    height: 300px;
    margin-left: 20%;
    
}


.skills {
    display: flex;
    flex-wrap: wrap; 
    gap: 20px; /* Espacio entre los ítems */
    justify-content: center; 
}

.skills div {
    display: flex;
    flex-direction: column; 
    align-items: center; 
    width: 100px; 
    text-align: center; 
}

.skills i {
    font-size: 2rem; 
    margin-bottom: 5px; 
}

.button-one, .button-two {
    display: inline-block;
    padding: 10px 20px;
    margin: 10px 5px;
    font-size: 14px;
    font-weight: bold;
    color: #333; 
    background-color: #D3D3D3; 
    border: none;
    border-radius: 5px; 
    text-decoration: none;
    transition: background-color 0.3s, transform 0.3s;
    box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1); 
}

.button-one:hover, .button-two:hover {
    background-color: #B0B0B0; 
    transform: translateY(-3px); 
}

.button-one:active, .button-two:active {
    background-color: #A0A0A0; 
    transform: translateY(1px); 
}

/* Estilos generales */
.menu-toggle {
    display: none; /* Ocultar en pantallas grandes */
    cursor: pointer;
}

#nav-menu {
    display: flex; /* Mostrar el menú en pantallas grandes */
    flex-direction: row;
}

@media (max-width: 768px) {

    .menu-toggle {
        display: block; /* Mostrar el menú hamburguesa en pantallas pequeñas */
        font-size: 28px; /* Tamaño del ícono del menú */
        padding: 10px; /* Espacio alrededor del ícono */
        border-radius: 5px;
        background-color: #333;
        color: #fff;
        position: absolute;
        top: 10px; /* Posición más arriba */
        right: 20px;
    }

    #nav-menu {
        display: none; /* Ocultar el menú de navegación en pantallas pequeñas */
        flex-direction: column;
        align-items: center; /* Centrar elementos */
        width: 100%;
        position: absolute;
        top: 60px; /* Espacio más ajustado para el menú */
        background-color: #333;
        padding: 20px 0; /* Ajusta el padding para el menú */
        box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
    }

    #nav-menu.show {
        display: flex; /* Mostrar el menú de navegación cuando esté abierto */
    }

    nav ul {
        display: flex;
        flex-direction: column;
        align-items: center; /* Centrar los elementos del menú */
        gap: 15px; /* Espacio entre los elementos */
        font-size: 20px; /* Reducir el tamaño del texto */
    }

    .social-icons {
        margin-top: 10px; /* Menos espacio entre el menú y los íconos sociales */
        display: flex;
        gap: 20px; /* Más espacio entre los íconos */
        justify-content: center;
        font-size: 24px; /* Aumentar el tamaño de los íconos */
        width: 100%;
    }

    .social-icons i {
        font-size: 1.8rem; /* Tamaño de los íconos sociales */
    }

    .skills div {
        width: 80px;
    }

    .skills i {
        font-size: 1.5rem;
    }
}

